--- a/src/sass/plugins/_ws-form.scss
+++ b/src/sass/plugins/_ws-form.scss
@@ -66,3 +66,8 @@
     }
     
 }
+#wpadminbar #wp-admin-bar-root-default li#wp-admin-bar-ws-form-node {
+    @media screen and (max-width: $screen-sm) {
+	display: none;
+    }
+}
