--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -3,6 +3,11 @@
 /*-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
+#nav {
+	background-color: var(--color-StandardHellgrau);
+}
+
+
 .nav {
     --fau-arrow-icon-size: 1rem;
     --fau-arrow-icon-color: var(--color-mainmenu-toplevel-text);
