--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -254,6 +254,10 @@
     [type="button"].current-menu-ancestor {
         color: var(--color-mainmenu-toplevel-hover-text);
         background: var(--color-mainmenu-toplevel-hover-bg);
+	
+	&:after {
+	     --fau-arrow-icon-color: var(--color-mainmenu-toplevel-hover-text);
+	}
     }
 
 
@@ -294,7 +298,7 @@
 		    margin-left: 0.1rem;
 		    mask-position-y: 0px;
 		    @extend .fau-triangle-icon-down;
-		 }
+		 }		 
             }
             &:hover {
                 > a {
@@ -314,7 +318,7 @@
             body:not(.mainnav-forceclick):not(.ismobile) &:focus-within .nav-flyout {
                 display: block;
             }
-
+	    
             > [type=button][aria-expanded=true] {
 		@include border-bottom-radius(0);
               
