alte hero navigation raus, ist nicht mehr in benutzung

--- a/src/sass/structure/hero/_hero.scss
+++ b/src/sass/structure/hero/_hero.scss
@@ -12,7 +12,7 @@
 @import "slider";
 
 // Links unterhalb Slider
-@import "linkregion";
+// @import "linkregion";
 
 // Startseite mit Banner
 @import "banner";
