quickfix für den gebrauch der class fau-icon in der ausgabe von mein studium plugin

--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -51,6 +51,11 @@
 // Plugin RRZE Legal
 @import "ws-form";
 
+
+// Plugin FAU Studium
+@import "fau-studium";
+
+
 // Everything else, coming from Plugins
 @import "plugin-misc";
 
