--- a/src/sass/block-library/_wp-general-classes.scss
+++ b/src/sass/block-library/_wp-general-classes.scss
@@ -14,7 +14,7 @@
 }
 // Regular Font size
 .has-regular-font-size {
-     @include px2rem($font-size-base);
+     font-size: var(--font-size-normal, 1rem);
 }
 
 // Large Font size
