--- a/src/sass/structure/footer/_pagefooter.scss
+++ b/src/sass/structure/footer/_pagefooter.scss
@@ -9,7 +9,7 @@
 	
 	
 	li {
-	    @include px2rem($font-size-base);
+	    font-size: var(--font-size-normal, 1rem);
 	    @media (min-width: $screen-sm) {
 		@include px2rem($font-size-footer);
 	    }
