--- a/src/sass/structure/content/_posts.scss
+++ b/src/sass/structure/content/_posts.scss
@@ -232,9 +232,9 @@
     .post-meta-categories,
     .post-meta-tags {
 	margin-right: var(--width-gutter-half);
-	display: flex;
-	align-items: center;
-	gap: 0.3rem;
+//	display: flex;
+//	align-items: center;
+//	gap: 0.3rem;
     }
     .post-meta-categories {		  
 	&:before {
