THeme Darstellung im Block Editoir nur noch bei den Post Types post und page.

--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -34,16 +34,18 @@ $font-path-roboto:	'../fonts/roboto/';
 // Fonts
 @import "fonts/fonts";
 
-.editor-styles-wrapper,
-.edit-post-visual-editor .editor-block-list__block {
-    
-    // Element Styles
-    @import "elements/elements";
-    
-    // Plugin-Support
-    @import "plugins/plugins";
- }
+.post-type-page,
+.post-type-post {
+    .editor-styles-wrapper,
+    .edit-post-visual-editor .editor-block-list__block {
 
+	// Element Styles
+	@import "elements/elements";
+
+	// Plugin-Support
+	@import "plugins/plugins";
+     }
+}
 
 // Backend Specials
 @import "backend/backend";
