--- a/src/sass/plugins/_fau-studium.scss
+++ b/src/sass/plugins/_fau-studium.scss
@@ -45,3 +45,7 @@ button[type="submit"].c-degree-programs-searchform__submit:hover {
     color: var(--color-button-hover-text);
     background-color:  var(--color-button-hover-bg);
 }
+
+.block-editor-page.post-type-studiengang {
+    
+}
