feat(BlockStyles) - Refactor the BlockEditor Styling
Relocate BlockEditor Styles in order to avoid issues regarding the core Gutenberg components. Add a Gulp Script for EditorStyles

--- a/src/sass/block-library/_wp-block-pullquote.scss
+++ b/src/sass/block-library/_wp-block-pullquote.scss
@@ -67,7 +67,7 @@
 		font-size: var(--wp--preset--font-size--medium);
 	    }
 	    cite {
-		ont-size: var(--wp--preset--font-size--base);
+		font-size: var(--wp--preset--font-size--base);
 	    }
 	}
     }
