--- a/src/sass/block-library/_wp-block-button.scss
+++ b/src/sass/block-library/_wp-block-button.scss
@@ -3,12 +3,14 @@
 /* Created on : 03.05.2024, 15:12:21
 /*----------------------------------------------------------------------------*/
 
-:where(.wp-block-button__link) {
-    border-radius: var(--border-radius, 9999px);
-}
+// :where(.wp-block-button__link) {
+//     border-radius: var(--border-radius, 9999px);
+// }
 
-.wp-element-button, 
-.wp-block-button__link {
-    @include defaultlinkstyle();
-    @include buttonstyle();
+.wp-block-buttons{
+    .wp-element-button, 
+    .wp-block-button__link {
+        @include defaultlinkstyle();
+        @include buttonstyle();
+    }
 }
