fix(core/button) - Styling & InspectorControls
Remove unnecessary styling options and add Ghost-Button style to the Editor. Resolves #1537

--- a/src/sass/block-library/_wp-block-button.scss
+++ b/src/sass/block-library/_wp-block-button.scss
@@ -7,10 +7,24 @@
 //     border-radius: var(--border-radius, 9999px);
 // }
 
-.wp-block-buttons{
-    .wp-element-button, 
+.wp-block-buttons {
+
+    .wp-element-button,
     .wp-block-button__link {
         @include defaultlinkstyle();
         @include buttonstyle();
+    }
+    .is-style-fill {
+        .wp-block-button__link {
+            @include defaultlinkstyle();
+            @include buttonstyle();
+        }
+    }
+
+    .is-style-outline {
+        .wp-block-button__link {
+            @include defaultlinkstyle();
+            @include ghostbutton();
+        }
     }
 }
