--- a/src/sass/backend/editor-style/_editor-style.scss
+++ b/src/sass/backend/editor-style/_editor-style.scss
@@ -5,8 +5,8 @@
 // Block Editor region
 @import "gutenberg";
 
-
 // Sidebar
 @import "editor-sidebar";
 
-
+// Paragraph
+@import "core-paragraph";
