--- a/src/sass/editor.scss
+++ b/src/sass/editor.scss
@@ -16,6 +16,8 @@
 // Block Library Overwrites
 @import "block-library/block-library";
 
+@import "backend/editor-style/editor-style";
+
 .editor-styles-wrapper{
     font-family: $fontStack;
 }
