--- a/src/sass/block-library/_wp-block-pullquote.scss
+++ b/src/sass/block-library/_wp-block-pullquote.scss
@@ -46,7 +46,7 @@
 		font-size: var(--wp--preset--font-size--x-large);
 	    }
 	    cite {
-		ont-size: var(--wp--preset--font-size--large);
+		font-size: var(--wp--preset--font-size--large);
 	    }
 	}
 	 
@@ -57,7 +57,7 @@
 		font-size: var(--wp--preset--font-size--large);
 	    }
 	    cite {
-		ont-size: var(--wp--preset--font-size--medium);
+		font-size: var(--wp--preset--font-size--medium);
 	    }
 	}
     }
