fix(core/heading) - Adjust the Styling
Extend the base Heading selectors with the core equivalent for better support. Resolves #1515

--- a/src/sass/backend/editor-style/_editor-style.scss
+++ b/src/sass/backend/editor-style/_editor-style.scss
@@ -10,3 +10,8 @@
 
 // Paragraph
 @import "core-paragraph";
+
+// Screenreader Classes
+@import "../../elements/accessibility";
+@import "../../elements/headlines";
+
